appId: com.ruwt.app
---
- launchApp
- assertVisible: "⚠️ MOCK MODE ACTIVE"
- tapOn: "Chat"
- waitForAnimationToEnd
- assertVisible: "•••"
- tapOn: "•••"
- assertVisible: "Report Issue"
- assertVisible: "Block Runner"
- tapOn: "Block Runner"
- waitForAnimationToEnd
- assertVisible: "Are you sure.*" 
- tapOn: "Block"
- assertVisible: ".*blocked.*"
- tapOn: "OK"
- assertVisible: ".*to unblock.*"
# - tapOn: ""
# - assertVisible: "has been unblocked"